7/21/14 #82 clean up of GamePlayNode and GameView
7/21/14 #82 factor out GamePlayNode, create it on demand (when first level-selection is made)
7/21/14 #82 optimize start up: initialize 'bar charts' and 'balance scales' representations on demand
# 1.0.0-dev.10 7/21/14
7/21/14 #69 BalanceScaleNode: optimization fixes, refactoring and cleanup
7/21/14 #69 BalanceScaleNode: create atoms on demand, use visibility to display the correct number of atoms
7/21/14 #69 rebuild scales only when equation changes, otherwise update counts for each scale
7/21/14 #69 reuse everything except atoms in BalanceScaleNode
7/21/14 #69 handle highlighting correctly in BalanceScaleNode
7/20/14 #70 add AACT to credits
7/18/14 #80 expand touchArea for radio buttons in Introduction screen
7/18/14 #69 clean up BalanceScaleNode constructor
7/18/14 #69 pass properties to BalanceScaleNode for number of atoms on each side of the scale (properties not observed yet)
7/18/14 #69 defer creation of 'Show Why' content until the button is pressed
7/18/14 #79 fix horizontal layout of bars that have arrows at top
7/18/14 #69 update numberOfAtomProperty instead of rebuilding bars when equation coefficients change
7/18/14 add Equation.toString to make inspection easier in debugger
7/18/14 #69 BarNode: fix vertical position whenever bar changes, wire up to numberOfAtomsProperty after VBox.call
7/18/14 #69 eliminate unnecessary computation of atom counts in BarChartsNode, clean up
7/18/14 add horizontal strut to BarNode, to prevent things from shifting horizontally when #atoms is zero vs non-zero
7/18/14 #69 move responsibility for observing Equation.balanced into EqualityOperatorNode
7/18/14 #69 move responsibility for observing equation terms into BoxNode
7/18/14 clean up wiring of coefficients observer
7/18/14 move responsibility for observing Equation.balanced into RightArrowNode
7/18/14 wire BCEFaceNode to Equation.balancedProperty instead of coefficients